# arc

./: README.md
atmega328p/init/: init_8mhz_clock.sh
atmega328p/ktir/: Makefile  main.ino
atmega328p/ktir/build-uno/: ktir.elf  ktir.hex
atmega328p/led/: Makefile  blink.ino
atmega328p/lm393/: Makefile  main.ino
atmega328p/pwm16/: Makefile  main.ino
atmega328p/pwm_proxy/: Makefile  main.ino  proto.h
atmega328p/pwm_proxy/build-uno/: main.ino.d  pwm_proxy.elf  pwm_proxy.hex
atmega328p/pwm_read/: Makefile  main.ino  proto.h
atmega328p/raspi_log/: Makefile  raspi_log  raspi_log.c
atmega328p/timer16spi/: Makefile  main.ino
config/etc/: wvdial.conf
ctrl.app/: Makefile  RTIMULib.ini  arc.lcm  server.sh
ctrl.app/arc/: __init__.py  camera_image_t.py  camera_t.py  control_motor_t.py  control_servo_t.py  control_t.py  distance_t.py  gps_t.py  imu_fusion_t.py  imu_t.py  req_plan_mpc_t.py  req_plan_path_t.py  res_plan_mpc_t.py  res_plan_path_t.py
ctrl.app/src/actuator/: controller.py  controller_atmega.py  nohup.out  test.py  wiring.py
ctrl.app/src/command/: command.py  runner.py
ctrl.app/src/planner/: gtc.tgz  gtc_client.py  mpc_client.py  mpc_cont_client.py  route_client.py
ctrl.app/src/planner/gtc/examples/: CMakeLists.txt  gtc.cpp  nonholonomic-car-demo.cpp
ctrl.app/src/sensor/: RTIMULib.ini  atmega.py  camera.py  controller.py  distance.py  gps.py  gps_client.py  gps_config.py  imu.py  imu_position.py  (+1 more)
web.app/: .#server.js  server.js
web.app/public/: client.js  index.html
webctrl.app/: arc  server.py
webctrl.app/templates/: index.html
(+57 files in other folders)
